2007-06-14 [wwp]	2.9.2cvs58

	* src/gtk/pluginwindow.c
		Yet another attempt to fix sizing/alignment of the
		button bar in plugins window.

2007-06-12 [colin]	2.9.2cvs57

	* po/POTFILES.in
	* src/Makefile.am
	* src/folderview.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_summaries.c
	* src/prefs_summary_open.c
	* src/prefs_summary_open.h
	* src/summaryview.c
		Make "when entering a folder" actions more personalisable

2007-06-12 [wwp]	2.9.2cvs56

	* tools/README
		Use short description from Paul (mairix.sh).

2007-06-12 [wwp]	2.9.2cvs55

	* tools/README
		Updated info about mairix.sh.

2007-06-11 [paul]	2.9.2cvs54

	* src/prefs_logging.c
		rework log window length widgets
		and some sensitivity fixes

2007-06-11 [paul]	2.9.2cvs53

	* src/mainwindow.c
	* src/prefs_logging.c
		rename 'Protocol Log' to 'Network Log'
		and some function renaming

2007-06-10 [wwp]	2.9.2cvs52

	* src/gtk/pluginwindow.c
		Revert 2.9.2cvs51.

2007-06-10 [wwp]	2.9.2cvs51

	* src/gtk/pluginwindow.c
		Fix button bar in plugin window, was centered and not
		behaving like other dialogs w/ such button bar.

2007-06-08 [wwp]	2.9.2cvs50

	* src/compose.c
	* src/compose.h
	* src/main.c
	* src/mainwindow.c
	* src/mainwindow.h
		Provide a way out of automatic draft saving on IMAP, when
		exiting offline.
		Prevent drafting while sending and quitting while sending.
		Thanks for Colin.



2007-06-08 [wwp]	2.9.2cvs49

	* src/prefs_account.c
	* src/gtk/prefswindow.c
	* src/gtk/prefswindow.h
		Activate the Basic page when opening account prefs.

2007-06-08 [wwp]	2.9.2cvs48

	* src/common/socket.c
		Don't crash if fork() fails, thanks to Colin.

2007-06-08 [wwp]	2.9.2cvs47

	* src/gtk/prefswindow.c
		Wrap some long lines, and reset horizontal scroller's adjusment
		(this was already done, vertically), when changing tab (not page)
		in prefs windows.

2007-06-08 [paul]	2.9.2cvs46

	* src/common/utils.c
		use gethostname() instead of uname()
		based on a patch by Michael Hughes