@@ -47,6 +47,7 @@
 #define OLD_GTK2_RC_DIR		".sylpheed-claws"
 #define OLDER_GTK2_RC_DIR	".sylpheed-gtk2"
 #define OLD_GTK1_RC_DIR		".sylpheed"
+#define SYLPHEED_RC_DIR		".sylpheed-2.0"
 #define NEWS_CACHE_DIR		"newscache"
 #define IMAP_CACHE_DIR		"imapcache"
 #define MBOX_CACHE_DIR		"mboxcache"
@@ -82,6 +83,7 @@
 #define PLUGINS_URI		"http://www.claws-mail.org/plugins.php"
 #define BUGZILLA_URI		"http://www.thewildbeast.co.uk/claws-mail/bugzilla/enter_bug.cgi"
 #define THEMES_URI		"http://www.claws-mail.org/themes.php"
+#define TOOLS_URI		"http://www.claws-mail.org/tools.php"
 #define MAILING_LIST_URI	"http://www.claws-mail.org/MLs.php"
 #define USERS_ML_ADDR		"claws-mail-users@dotsrc.org"
 #define GPL_URI			"http://www.gnu.org/licenses/gpl.html"
