@@ -1,3 +1,9 @@
+2007-06-14 [paul]	2.9.2cvs59
+
+	* src/main.c
+	* src/common/defs.h
+		migrate sylpheed config
+
 2007-06-14 [wwp]	2.9.2cvs58
 
 	* src/gtk/pluginwindow.c
